2005-08-18  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-posts-narrow-by-date): Change name of
	date narrowing function to make namespace room for an interactive
	command to search all posts by date.
	(delicious-posts-matching-date): New function to return all posts
	matching a date.

	* planner-delicious.el (planner-delicious-posts-match-any): Change
	name of date narrowing function.
	(planner-delicious-posts-match-all): Change name of date narrowing
	function.
	(planner-delicious-append-posts-match-date): New command to append
	posts matching a date regexp.
	(planner-delicious-rewrite-posts-match-date): New command to
	replace current delicious section with posts matching a date
	regexp.
	(planner-delicious-rewrite): Remove blank lines between
	links. Keep one blank line at the top of the section and one at
	the bottom.
	(planner-delicious-append): Remove blank lines between links. Keep
	one blank line at the beginning of the appended chunk and one at
	the end.

	* delicioapi.el (delicious-send-request): Fixed bug reported by
	Gunnar Wrobel that prevented things from working with Squid (and
	probably other proxies too).

2005-08-09  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-search-delete-tags): Replaced ugly
	substring hack with something better.

2005-08-08  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-post-matching-hash): Forgot to make the
	OFFLINE argument optional.
	(delicious-search-who-else): Changed to use the url?url form,
	because Joshua says we can't rely on the md5 hash.
	(delicious-read-time-string): Use the current time if no time
	string is entered. Didn't I do this before?
	(delicious-complete-tags): Forgot to respect the offline argument
	when building the tags list.
	(delicious-build-tags-list): Forgot here too.
	(delicious-save-buffer): Bury the buffer here, so we don't have to
	do it twenty other places.
	(delicious-post-cache): Use ASSOC instead of ELT; safer when then